# pydantic_web_editor

./: .gitignore  README.md  build.sh  build2.sh  package-lock.json  package.json
examples/: example-requirements.txt  fastapi_example.py  fastapi_example2.py  flask_example.py
examples/static/: bundle.css  bundle.js
examples/static/js/: main.a2006285.js  main.cdd28efc.js  main.cdd28efc.js.LICENSE.txt  main.fd7d7bdf.js
pydantic_web_editor/: pyproject.toml
pydantic_web_editor/src/pydantic_web_editor/: __init__.py  main.py
pydantic_web_editor/src/pydantic_web_editor/static/: bundle.js
pydantic_web_editor/src/pydantic_web_editor/templates/: index.html  pydantic_web_editor.html
pydantic_web_editor/tests/: test_pydantic_web_editor.py
pydantic_web_editor_webpack/: package-lock.json  package.json  webpack.config.js
pydantic_web_editor_webpack/src/: index.js  style.css
pydantic_web_editor_webpack/statics/: bundle.css
react_editor/: package-lock.json
react_editor/src/: MyJsonFormsComponent.test.tsx  MyJsonFormsComponent.tsx  index.tsx
