[tool.poetry]
name = "pydantic_web_editor"
version = "0.1.0"
description = ""
authors = ["adam.ulring <adam.ulring1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.0"
Jinja2 = "^3.1.2"
sqlmodel = {git = "https://github.com/th33ngineers/sqlmodel.git", rev = "2abfaa2"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
