[tool.poetry]
name = "pydantic_web_editor"
version = "0.1.0"
description = ""
authors = ["adam.ulring <adam.ulring1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "<2.0.0"
Jinja2 = "^3.1.2"
sqlmodel = "^0.0.8"
schorg = "^0.7.5"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
